[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typing-pep-knowledge-reasoner"
version = "0.1.0"
description = "Deterministic knowledge graph and reasoning engine for Python typing PEP evolution."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
typing-pep-kg = "src.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
